update added footer section

--- a/index.html
+++ b/index.html
@@ -208,6 +208,32 @@
     </section>
     <!-- Bag catagory section end -->
 
+    <!-- subcribe section text message start  -->
+
+    <section class="my-5">
+        <div class="container rounded bg-warning subcribe d-flex justify-content-center">
+            <div>
+                <h2 class="fw-bold">LET'S STAY IN TOUCH</h2>
+            <p class="text-muted">Get updates on sales, specials and more.</p>
+            <div>
+                  <div class="mb-3">
+                    <textarea class="form-control " id="exampleFormControlTextarea1" rows="1"></textarea>
+                  </div>
+                  <div class="col-12">
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                  </div>
+            </div>
+            </div>
+        </div>
+    </section>
+    <!-- subcribe section text message end  -->
+
+    <!-- footer section -->
+
+    <footer class="mt-2 text-center">
+        <p><small>©2023. E-commarce. All rights reserved.kopi hannan, bangladesh</small></p>
+    </footer>
+
     <!-- bootstrap js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
